# ttd

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  STRATEGY.md  justfile  prek.toml  pyproject.toml  zensical.toml
.cursor/rules/: ce-planning-artifacts.mdc  ferro-upstream.mdc  production-data-backup.mdc  python-design.mdc  quality-gate.mdc  ttd-architecture.mdc  uv-workflow.mdc
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-review-fixes-report.md
brainstorms/: 2026-05-24-billing-ledger-requirements.md  2026-05-24-foundational-techstack-requirements.md  2026-05-25-export-period-close-requirements.md  2026-05-26-cli-interactive-capture-requirements.md  2026-05-26-config-setup-requirements.md  2026-05-29-config-toml-requirements.md  2026-05-29-export-xlsx-requirements.md  2026-05-31-m5-data-trust-requirements.md
docs/: getting-started.md  index.md  roadmap.md
docs/design/: data-layer.md  general.md
docs/pages/: contributing.md  index.md
docs/pages/getting-started/: installation.md  quickstart.md
docs/pages/guides/: clients-and-projects.md  configuration.md  data-and-backups.md  import-export.md  invoicing.md  managing-entries.md  reports.md  taxes.md  the-tui.md  tracking-time.md
docs/pages/reference/: configuration.md  interchange-format.md  keyboard-shortcuts.md  time-expressions.md
docs/plans/: 2026-05-24-001-feat-foundational-techstack-plan.md
docs/solutions/architecture-patterns/: layered-toml-config-pytest-isolation.md
docs/superpowers/plans/: 2026-06-30-billable-expenses.md  2026-06-30-tui-log-page.md  2026-07-01-flexible-invoice-periods.md  2026-07-01-tui-invoice-render-format.md
docs/superpowers/specs/: 2026-06-30-billable-expenses-design.md  2026-06-30-tui-log-page-design.md  2026-07-01-flexible-invoice-periods-design.md  2026-07-01-tui-invoice-render-format-design.md
docs/tapes/: log-parsing.tape  quickstart.tape  tui-tour.tape
docs/upstream/: README.md  ferro-alter-table-stale-pool-repro-standalone.py  ferro-enum-hydration-repro-standalone.py  ferro-enum-hydration-repro.py  ferro-v012-get-or-none-delete-operator-predicate-repro-standalone.py  ferro-v012-session-cross-context-teardown-repro-standalone.py  ferro-v012-unnamed-session-repro-standalone.py
plans/: 2026-05-24-001-feat-foundational-techstack-plan.md  2026-05-25-002-feat-billing-ledger-plan.md  2026-05-25-003-feat-export-period-close-plan.md  2026-05-26-004-feat-cli-interactive-capture-plan.md  2026-05-29-001-feat-config-toml-plan.md  2026-05-31-001-feat-m5-data-trust-plan.md
scripts/: gen_cli_docs.py  gen_screenshots.py  seed_docs_demo.py
src/ttd/: __init__.py  __main__.py
src/ttd/api/: app.py
src/ttd/cli/: _interactive.py  _run.py  (+34 more)
tests/: _runner.py  conftest.py  test_api_entry.py  test_cli_entry.py  test_health.py  test_tui_import.py
tests/cli/: test_commands.py  test_config_cmds.py  test_db_commands.py  test_export_cmds.py  test_interactive.py  test_output.py  test_portable_json_cmds.py  test_sort.py
tests/core/: test_clients.py  test_config.py  test_db_admin.py  test_db_admin_backup.py  test_domain_hours.py  test_domain_rates.py  test_domain_rounding.py  test_enum_hydration.py  test_export.py  test_hours_hypothesis.py  test_ledger_reads.py  test_models_smoke.py  test_portable_json_export.py  test_portable_json_import.py  test_projects.py  test_rounding_hypothesis.py  test_seed.py  test_time.py  test_time_entries.py
tests/test_cli/: test_client_project_cli.py  test_interactive.py  test_invoice_cli.py  test_report_cli.py  test_tax_cli.py  test_timer_log_cli.py
tests/test_config/: test_loader.py  test_writer.py
tests/test_interchange/: test_expense_backup.py  test_importer.py  test_roundtrip.py
tests/test_invoicing/: test_derived_period.py  test_expense_render.py  test_invoicing.py  test_invoicing_expenses.py  test_render_helper.py
tests/test_parsing/: test_corpus.py  test_fuzz.py
tests/test_reporting/: test_periods.py
tests/test_rollup/: test_periods.py  test_rounding_and_rollup.py
tests/test_storage/: test_crud.py  test_expenses.py  test_timer_and_entries.py
tests/test_taxes/: test_quarters.py  test_tax_service.py
tests/test_tui/: _db.py  test_app.py  test_expense_data.py  test_footer.py  test_forms.py  test_render_modal.py
(+106 files in other folders)
