[project]
name = "ttd-ledger"
version = "0.2.1"
description = "Terminal-first time tracking, reporting, and invoicing for solo developers"
readme = "README.md"
authors = [
    { name = "Taylor", email = "taylor@x54.sh" }
]
requires-python = ">=3.13"
dependencies = [
    "ferro-orm[alembic]>=0.10.5",
    "cyclopts>=4.17",
    "rich>=14",
    "textual>=3.0",
    "pydantic>=2.7",
    "questionary>=2.0",
    "platformdirs>=4",
    "tomlkit>=0.13",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "numbers-parser>=4.18",
    "fpdf2>=2.8",
    "textual-plotext>=1.0.1",
]

[project.scripts]
ttd = "ttd.cli.app:main"

[dependency-groups]
dev = [
    "commitizen>=4.0.0",
    "hypothesis>=6",
    "prek>=0.4",
    "pytest>=8",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6",
    "pytest-textual-snapshot>=1.1",
    "ruff>=0.11",
    "textual-dev>=1.7",
    "ty>=0.0.1a0",
    "zensical>=0.0.6",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ttd"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "TC", "PTH", "DTZ"]
allowed-confusables = ["–", "—"]
ignore = [
    "DTZ005", # naive local datetimes are intentional: entries are wall-clock local time
    "DTZ011",
    "DTZ001",
    "DTZ007",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["DTZ"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=ttd",
    "--cov-report=term-missing",
    "--cov-config=pyproject.toml",
]

[tool.coverage.run]
source = ["src/ttd"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 84
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
version_files = [
    "src/ttd/__init__.py:__version__",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
annotated_tag = true
